# cve_evaluation_toolkit

./: .gitignore  CHANGELOG.md  ERROR_HANDLING_SUMMARY.md  LICENSE  Makefile  README.md  all_statges.txt  analyze_trace_eval.py  api_10debug_output.json  api_12debug_output.json  api_15debug_output.json  api_1debug_output.json  api_2debug_output.json  api_3debug_output.json  api_5debug_output.json  api_payload_preview.json  debug-pod.yaml  debug_job_00587bc7.json  debug_output.json  debug_payload_agent.json  debug_payload_intel.json  debug_payload_justification.json  debug_payload_summary.json  extractor.py  job_001c603c_traces.json  job_00a22046_info.json  jobs_top20.json  latest_integration_batch.json  plot_evaluation_results.py  pyproject.toml  raw_job_00587bc7.json  raw_traces_00587bc7.json  tool_span.py
.deepeval/: .deepeval_telemetry.txt
deployment/: Dockerfile
evaluation/: __init__.py  api_client.py
evaluation/utils/: __init__.py  (+1 more)
output/: evaluation_results.json
scripts/: run_cve_evaluation.py  test_data_parser.py
temp_traces/: trace_0013071d-ca99-4e82-8be8-48b51ff4664c.json  trace_00185307-27f5-4132-ac02-2e3f0ab22a03.json  trace_001c603c-8543-4962-8794-5766404a34fa.json  trace_00582fc8-4591-4db0-afd4-eb160aaba29d.json  trace_00587bc7-d196-4c02-be1b-16999412ee2a.json  trace_005f4bd9-2fc9-4cb5-b5db-ec83b7778c60.json  trace_00a193df-6936-4df1-a4f8-fd4f9f425913.json  trace_00d90466-3173-4af9-ac7f-4a9758927e59.json  trace_00dcc380-4698-49c7-b36e-f3894ba48b8c.json  trace_00f728e7-a1b0-4096-9b97-ace325d3d643.json  trace_010854b9-10c9-4878-9cd6-765845c5f4e7.json  (+7 more)
(+17 files in other folders)
